Fix table overflow, single click instead of double to navigate

--- a/web/src/components/files/MoveModal.scss
+++ b/web/src/components/files/MoveModal.scss
@@ -9,9 +9,11 @@
     }
   }
 
-  table {
+  .table-wrapper {
     background-color: var(--panel-color);
     border-radius: $border-radius;
+    height: 400px;
+    overflow: auto;
 
     .no-entries {
       font-style: italic;
